# NLP-Labs

./: .gitignore  README.md  pyproject.toml
Lab-Fine-Tuning/: Fine-Tuning-BERT.ipynb
Lab-Fine-Tuning/Assignment/: Assignment-solution.ipynb  Assignment.ipynb
Lab-Fine-Tuning/Assignment/resulting_file/: experiments_Arkadiusz_Modzelewski_29580.json  experiments_name_surname_student_id.json
Lab-Fine-Tuning/Assignment/test/: test_structure_of_json_file.py
Lab-Retrieval-Augmented-Generation/: RAG.ipynb  RAG_first_version.ipynb
Lab-Retrieval-Augmented-Generation/Assignment/: Assignment.ipynb
Lab-Retrieval-Augmented-Generation/Assignment/resulting_file/: rag_report_Arkadiusz_Modzelewski_29580.json  rag_report_name_surname_id.json
Lab-Retrieval-Augmented-Generation/Assignment/test/: test_structure_of_json_file.py
Lab4-Prompting-And-Fine-Tuning/: Assignment.ipynb  Assignments.ipynb  Fine-Tuning-BERT.ipynb  Prompting-And-Fine-Tuning.ipynb  Prompting_with_LLMs.ipynb  experiments_Arkadiusz_Modzelewski_29580.json  experiments_name_surname_student_id.json
Lab4-Prompting-And-Fine-Tuning/src/: config.yaml  fine_tuning.py  prompting-classification.py  prompting.py
Lab4-Prompting-And-Fine-Tuning/src/prompts/: disinformation-zero-shot.yaml  few-shot.yaml  zero-shot-CoT.yaml  zero-shot.yaml
Lab4-Prompting-And-Fine-Tuning/src/result/: dis_classification_zero_shot_gpt3_5.csv  dis_classification_zero_shot_gpt4o_mini.csv  (+4 more)
Prompting/: Prompting_Exercise_with_HuggingFace.ipynb
Prompting/result/: math_problem_cot.csv  math_problem_few_shot.csv  math_problem_zero_shot.csv
(+3 files in other folders)
